--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/Front-end/F8/w3_band/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/themify-icons.css">
     <link rel="stylesheet" href="/responsive.css">
     <title>Konoha's 7th Team</title>
 </head>
